Modify prevented failures statistic and description
Updated the prevented failures statistic and its description in the HTML.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 </div>
                                 <div class="p-6 bg-white/5 rounded-2xl border border-white/10">
                                     <p class="text-[10px] font-bold text-slate-500 uppercase mb-2">Prevented Failures</p>
-                                    <p id="stat-prevented-impact" class="text-2xl font-black">184</p>
+                                    <p id="stat-prevented-impact" class="text-2xl font-black">Based on scaled simulation across 320-asset fleet using 74% recall detection rate.</p>
                                 </div>
                                 <div class="pt-6 border-t border-white/10">
                                     <p class="text-[9px] text-slate-500 font-bold uppercase leading-relaxed">System has successfully mitigated reactive expenditure through orchestrated early-intervention logic.</p>
@@ -609,7 +609,7 @@
             backendConnected: true,
             metrics: { 
                 roi: 4.2, savings: 1.8, health: 91, 
-                prevented: 184, operatingCost: 0.8, netGain: 3.4
+                prevented: 68, operatingCost: 0.8, netGain: 3.4
             },
             latency: 34,
             alerts: [
